Middleware creation and route definition

--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+API_KEY="web_app"
+API_TOKEN="fH9k6MWGBXsul9M2YH5cnsWrfH8Qg5l3"
